@startuml
enum com.example.siduraboda.models.Weekday {
+  SUNDAY
+  MONDAY
+  TUESDAY
+  WEDNESDAY
+  THURSDAY
+  FRIDAY
+  SATURDAY
- String dayName
+ String getDayName()
+ String toString()
}


class com.example.siduraboda.models.DayAndHours {
+ Weekday day
+ HourMinute startTime
+ HourMinute endTime
+ Weekday getDay()
+ void setDay(Weekday)
+ HourMinute getStartTime()
+ void setStartTime(HourMinute)
+ HourMinute getEndTime()
+ void setEndTime(HourMinute)
+ boolean checkIfClosed()
+ String toString()
}


class com.example.siduraboda.models.Student {
- String id
- String Name
- Date birthdate
- String address
- String phone
- String password
- Boolean theory
- Boolean checkeye
- Boolean healthdec
- String teacherId
- String status
+ String getId()
+ void setId(String)
+ String getName()
+ void setName(String)
+ Date getBirthdate()
+ void setBirthdate(Date)
+ String getAddress()
+ void setAddress(String)
+ String getPhone()
+ void setPhone(String)
+ String getPassword()
+ void setPassword(String)
+ Boolean getTheory()
+ void setTheory(Boolean)
+ Boolean getCheckeye()
+ void setCheckeye(Boolean)
+ Boolean getHealthdec()
+ void setHealthdec(Boolean)
+ String getTeacherId()
+ void setTeacherId(String)
+ String getStatus()
+ void setStatus(String)
+ String toString()
}


class com.example.siduraboda.models.Car {
- String type
- String rank
- String carNumber
- String licenseDate
- String insuranceDate
+ String getType()
+ void setType(String)
+ String getRank()
+ void setRank(String)
+ String getCarNumber()
+ void setCarNumber(String)
+ String getLicenseDate()
+ void setLicenseDate(String)
+ String getInsuranceDate()
+ void setInsuranceDate(String)
+ String toString()
}


class com.example.siduraboda.models.Teacher {
~ boolean isAdmin
- String uid
- String password
- String firstName
- String lastName
- String licenseId
- String phone
- ArrayList<Car> cars
- String profileImage
+ String getUid()
+ void setUid(String)
+ String getPassword()
+ void setPassword(String)
+ String getFirstName()
+ void setFirstName(String)
+ String getLastName()
+ void setLastName(String)
+ String getLicenseId()
+ void setLicenseId(String)
+ String getPhone()
+ void setPhone(String)
+ boolean isAdmin()
+ void setAdmin(boolean)
+ String getProfileImage()
+ void setProfileImage(String)
+ ArrayList<Car> getCars()
+ void setCars(ArrayList<Car>)
+ String toString()
+ void addCar(Car)
}


class com.example.siduraboda.models.Lesson {
- String id
- String teacherId
- String studentId
- Car car
- DayAndHours dayAndHours
- String date
- String teacherNotes
+ String getId()
+ void setId(String)
+ String getTeacherId()
+ void setTeacherId(String)
+ String getStudentId()
+ void setStudentId(String)
+ Car getCar()
+ void setCar(Car)
+ DayAndHours getDayAndHours()
+ void setDayAndHours(DayAndHours)
+ String getDate()
+ void setDate(String)
+ String getTeacherNotes()
+ void setTeacherNotes(String)
+ String toString()
}


class com.example.siduraboda.models.HourMinute {
~ int hour
~ int minute
- {static} int parseHour(String)
- {static} int parseMinute(String)
+ {static} HourMinute fromString(String)
+ int getHour()
+ void setHour(int)
+ int getMinute()
+ void setMinute(int)
+ String toString()
+ int compareTo(HourMinute)
+ boolean equals(Object)
+ int hashCode()
}




java.io.Serializable <|.. com.example.siduraboda.models.Car
com.example.siduraboda.models.Comparable <|.. com.example.siduraboda.models.HourMinute
@enduml